tests/miniJava/neg/000205_mutation.MiniJava
class java { public static static void Main ( String [ ] java ) { { } } }
